--- a/src/app/component/pincomp/pincomp.component.html
+++ b/src/app/component/pincomp/pincomp.component.html
@@ -1,28 +1,32 @@
-<div fxLayout="row" fxLayoutAlign="center center"  >
-    <div fxLayout="row wrap"  fxLayout="row wrap"    fxLayoutGap="30px" fxLayoutAlign="center center">
-    <div *ngFor="let note of notes">
-       <div *ngIf="note.isPinned==0">
-          <mat-card [ngStyle]="{'background-color':note.color}" class="matcard2" 
-          [ngClass]=" direction =='row' ? 'matpad2':'matpad3' ">
-           
-             <form>
-                <app-pin [noteInfo]=note></app-pin>
-                <div class="notearea" >
-                   <div>
-                      {{note.title}}
-                   </div>
-                   <br>
-                   <div>
-                      {{note.description}}
-                   </div>
-                </div>
-                <app-addlabel [labelInfo]=note></app-addlabel>
-                <div class=appicons fxLayoutAlign="center center">
-                   <app-icon [noteInfo]=note></app-icon>
-                </div>
-             </form>
-          </mat-card>
-       </div>
+<div fxLayout="row" fxLayoutAlign="center center">
+    <div fxLayout="row wrap" fxLayout="row wrap" fxLayoutGap="30px" fxLayoutAlign="center center">
+        <div *ngFor="let note of notes">
+            <div *ngIf="note.isPinned==0">
+                <mat-card [ngStyle]="{'background-color':note.color}" class="card">
+                    <div class=pin>
+                        <button mat-icon-button (click)="unpin(note)">
+                            <mat-icon class=color> <img style="margin-left: 181px;" src="../../../assets/pin.png">
+                            </mat-icon>
+
+                        </button>
+                    </div>
+                    <form>
+                        <div class="notearea">
+                            <div>
+                                {{note.title}}
+                            </div>
+                            <br>
+                            <div>
+                                {{note.description}}
+                            </div>
+                        </div>
+                        <app-addlabel [labelInfo]=note></app-addlabel>
+                        <div class=appicons fxLayoutAlign="center center">
+                            <app-icon [noteInfo]=note></app-icon>
+                        </div>
+                    </form>
+                </mat-card>
+            </div>
+        </div>
     </div>
-  </div>
-  </div>
+</div>
