refractor.changes done of pin and unpin icons

--- a/src/app/component/pincomp/pincomp.component.css
+++ b/src/app/component/pincomp/pincomp.component.css
@@ -7,10 +7,10 @@
 }
  
 
-.matpad3
+.card
 {
     height: max-content;
-    width: 547px;
+    width: 300px;
     padding-left: 50px;
 
      margin-top: 50px;
