--- a/src/app/component/trash/trash.component.css
+++ b/src/app/component/trash/trash.component.css
@@ -3,7 +3,7 @@
     margin: 40px;
     border-radius: 14px;
     margin-left: -7px;
-    width: 260px;
+    width: 400px;
     padding-bottom: 38px;
 }
 .show{
@@ -24,4 +24,8 @@
 
 .allnotes{
     width: 20px;
+}
+.icons
+{
+    margin-right: 100px;
 }
